update add buttom

--- a/Client/src/app/add-new-post/add-new-post.component.html
+++ b/Client/src/app/add-new-post/add-new-post.component.html
@@ -1,8 +1,8 @@
 
 <form #f="ngForm" (ngSubmit)="addPost()">
-    Title: <input type="text" [(ngModel)] = "title" name="title">
-    Post : <input type="text" [(ngModel)]="body" name="body">
-    <input type="submit" value="Add"> &nbsp;
+    Title: <input required type="text" [(ngModel)] = "title" name="title">
+    Post : <input required type="text" [(ngModel)]="body" name="body">
+    <input [disabled]="!f.valid" type="submit" value="Add"> &nbsp;
     <input type="button" (click)="back()" value="Cancel">
     
 </form>
