--- a/Client/src/app/add-new-todo/add-new-todo.component.html
+++ b/Client/src/app/add-new-todo/add-new-todo.component.html
@@ -1,8 +1,8 @@
 <p>add-new-todo works!</p>
 
 <form #f="ngForm" (ngSubmit)="addTask()">
-    <input type="text" [(ngModel)]="title" name="title"><br/>
+    <input required type="text" [(ngModel)]="title" name="title"><br/>
     <input type="button" value="cancel" (click)="back()">
-    <input type="submit" value="Add">
+    <input [disabled]="!f.valid" type="submit" value="Add">
 </form>
 
