--- a/Client/src/app/post/post.component.html
+++ b/Client/src/app/post/post.component.html
@@ -1,4 +1,6 @@
-<mat-card>
+
+
+<mat-card style="margin-bottom: 7px;border: 2px solid purple ;">
     {{post.Title}}<br/>
     {{post.Body}}<br/>
     <br/>
