--- a/Client/src/app/user/user.component.html
+++ b/Client/src/app/user/user.component.html
@@ -1,17 +1,18 @@
 
 <mat-card  [ngStyle]="taskComleted? {'border' : '2px solid green'} : {'border' : '2px solid red
-'} " (click)="SendIdToParent()" [style.background-color]="user.BackgroundColor">
-    ID : {{this.user._id}}<br/>
+'}" style="margin-bottom: 8px;" (click)="SendIdToParent()" [style.background-color]="user.BackgroundColor">
+    ID : {{this.user._id}}<br/> 
     Name: <input type="text" [(ngModel)]="user.Name" name="name"><br/>
     Email: <input type="text" [(ngModel)]="user.Email" name="emzil"><br/>
 
-    <div *ngIf="flag" (click)="HideOtherData()">
+    <input type="button" value="Other Data" (mouseover)="presentOterData()">
+    <div *ngIf="flag" (click)="HideOtherData()" style="border: solid 2px black;background-color: gray;">
         Street: {{user.Street}}<br/>
         Zipcode: {{user.Zipcode}}<br/>
         City: {{user.City}}<br/>
     </div>
     <mat-card-actions>
-    <input type="button" value="Other Data" (mouseover)="presentOterData()">
+    
     <input type="button" value="Update" (click)="update()">
     <input type="button" value="Delete" (click)="delete()">
     </mat-card-actions>
