--- a/Client/src/app/add-new-post/add-new-post.component.html
+++ b/Client/src/app/add-new-post/add-new-post.component.html
@@ -1,10 +1,12 @@
+<h1>New Post – User {{id}}</h1>
 
-<form #f="ngForm" (ngSubmit)="addPost()">
-    Title: <input required type="text" [(ngModel)] = "title" name="title">
-    Post : <input required type="text" [(ngModel)]="body" name="body">
+<div style="padding: 10px;;border: 2px solid black ;">
+    <form #f="ngForm" (ngSubmit)="addPost()">
+    Title: <input required type="text" [(ngModel)] = "title" name="title"><br/>
+    Post: <input required type="text" [(ngModel)]="body" name="body"><br/>
     <input [disabled]="!f.valid" type="submit" value="Add"> &nbsp;
-    <input type="button" (click)="back()" value="Cancel">
-    
+    <input type="button" (click)="back()" value="Cancel">  
 </form>
+</div>
 
 
