--- a/Client/src/app/add-new-todo/add-new-todo.component.html
+++ b/Client/src/app/add-new-todo/add-new-todo.component.html
@@ -1,8 +1,9 @@
-<p>add-new-todo works!</p>
-
+<h1>New Todo – User {{id}}</h1>
+<div style="padding: 10px;;border: 2px solid black ;">
 <form #f="ngForm" (ngSubmit)="addTask()">
-    <input required type="text" [(ngModel)]="title" name="title"><br/>
-    <input type="button" value="cancel" (click)="back()">
+    Title : <input required type="text" [(ngModel)]="title" name="title"><br/>
     <input [disabled]="!f.valid" type="submit" value="Add">
+    <input type="button" value="cancel" (click)="back()">
 </form>
+</div>
 
