--- a/Client/src/app/add-user/add-user.component.html
+++ b/Client/src/app/add-user/add-user.component.html
@@ -1,6 +1,10 @@
+<h1>Add new user </h1>
+
+<div style="padding: 10px;;border: 2px solid black ;">
 <form #f="ngForm" (ngSubmit)="addUser()">
     Name : <input required type="text" [(ngModel)]="name" name="name"><br/>
     Email : <input required type="text" [(ngModel)]="email" name = "email"><br/>
     <input [disabled]="!f.valid" type="submit" value="Add">
     <input type="button" value="Cancel">
 </form>
+</div>
