--- a/Client/src/app/start/start.component.html
+++ b/Client/src/app/start/start.component.html
@@ -1,4 +1,4 @@
 <table>
-    <tr><td><app-users></app-users></td><td><router-outlet></router-outlet></td></tr>
+    <tr><td style="margin-top: 0%; padding-top: 0%;"><app-users></app-users></td><td><router-outlet></router-outlet></td></tr>
 </table>
 
