fix style & change commponents

--- a/Client/src/app/post/post.component.html
+++ b/Client/src/app/post/post.component.html
@@ -1,7 +1,6 @@
-
-
-<mat-card style="margin-bottom: 7px;border: 2px solid purple ;">
-    {{post.Title}}<br/>
-    {{post.Body}}<br/>
-    <br/>
+<mat-card class="card_style">
+     <h2>{{post.Title}}</h2> 
+    <mat-card-content>
+         {{post.Body}}
+    </mat-card-content>
 </mat-card>
