--- a/Client/src/app/add-user/add-user.component.html
+++ b/Client/src/app/add-user/add-user.component.html
@@ -1,10 +1,56 @@
-<h1>Add new user </h1>
 
-<div style="padding: 10px;;border: 2px solid black ;">
-<form #f="ngForm" (ngSubmit)="addUser()">
-    Name : <input required type="text" [(ngModel)]="name" name="name"><br/>
-    Email : <input required type="text" [(ngModel)]="email" name = "email"><br/>
-    <input [disabled]="!f.valid" type="submit" value="Add">
-    <input type="button" value="Cancel">
-</form>
-</div>
+
+
+<mat-card fxLayout="column">
+    <mat-card-content>
+        <mat-card-header>
+            <h2>New User</h2>
+        </mat-card-header>
+        <form #f="ngForm" (ngSubmit)="addUser()" >
+            <table>
+                <tr>
+                    <th>
+                        Name : 
+                    </th>
+                    <td>
+                        <input type="text" [(ngModel)]="newUser.Name" name="name">
+                    </td>
+                </tr>
+                <tr>
+                    <th>
+                        Email : 
+                    </th>
+                    <td>
+                        <input type="text" [(ngModel)]="newUser.Email" name = "email">
+                    </td>
+                </tr>
+                <tr>
+                    <th>
+                        Street : 
+                    </th>
+                    <td>
+                        <input type="text" [(ngModel)]= "newUser.Street" name= "street">
+                    </td>
+                </tr>
+                <tr>
+                    <th>
+                        City : 
+                    </th>
+                    <td>
+                        <input type="text" [(ngModel)]= "newUser.City" name= "city">
+                    </td>
+                </tr>
+                <tr>
+                    <th>
+                        Zipcode : 
+                    </th>
+                    <td>
+                        <input type="number" [(ngModel)]= "newUser.Zipcode" name= "zipcode">
+                    </td>
+                </tr>
+            </table>
+            <button mat-raised-button color="primary"  value="Add" type="submit" class="buttons">Update</button>
+        </form>
+    </mat-card-content>
+
+</mat-card>
